--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,11 @@
 version: '3'
 
 services:
-#  app:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    environment:
-#      MONGODB_URI: mongodb://meli:meli@db:27017/meli?ssl=false&authSource=admin
-#    ports:
-#        - "8080:8080"
-#    depends_on:
-#        - db
-#    links:
-#      - db
-  db:
-    image: mongo
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      .env
     ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: meli
-      MONGO_INITDB_ROOT_PASSWORD: meli
-      MONGO_INITDB_DATABASE: meli
-#    volumes:
-#      - ./data:/data/db
+        - "8080:8080"
