:sparkles: llamadas sincronicas con vendedores y productos
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -2,5 +2,7 @@ MONGODB_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=admin
 DB_NAME=meli
 DB_PASSWORD=meli
 DB_DATABASE=meli
-APP_PORT=50052
+APP_PORT=9000
 USER_URL=http://localhost:50051/api/v1
+PRODUCT_URL=http://localhost:50052/api/v1/products
+PURCHASE_URL=http://localhost:50053/api/v1/purchases
