se agregan configuraciones para desplegar la app y correr los tests de integracion con docker compose y configuracion de variables de entorno
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,21 @@
-MONGODB_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=admin
+# API GATEWAY
+API_GATEWAY_APP_PORT=9000
+USER_URL=http://users-service:50051/api/v1
+PRODUCT_URL=http://products-service:50052/api/v1/products
+PURCHASE_URL=http://purchases-service:50053/api/v1/purchases
+
+# USERS SERVICE
+USERS_APP_PORT=50051
+MONGODB_CUSTOMERS_URI=mongodb+srv://<username>:<password>@cluster0.yimpnfi.mongodb.net/?retryWrites=true&w=majority
+MONGODB_SELLERS_URI=mongodb+srv://<username>:<password>@cluster0.wwtna6p.mongodb.net/?retryWrites=true&w=majority
+
+# PRODUCTS SERVICE
+PRODUCTS_APP_PORT=50052
+MONGODB_PRODUCTS_URI=mongodb+srv://<username>:<password>@cluster0.0abq03u.mongodb.net/?retryWrites=true&w=majority
+
+# PURCHASE SERVICE
+PURCHASES_APP_PORT=50053
+MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongodb.net/?retryWrites=true&w=majority
+
+# GLOBAL ENVS FOR SERVICES
 DB_NAME=meli
-DB_PASSWORD=meli
-DB_DATABASE=meli
-APP_PORT=9000
