--- a/products/.env.example
+++ b/products/.env.example
@@ -1,5 +1,3 @@
-MONGODB_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=admin
+PRODUCTS_APP_PORT=50052
+MONGODB_PRODUCTS_URI=mongodb+srv://<username>:<password>@cluster0.0abq03u.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=meli
-DB_PASSWORD=meli
-DB_DATABASE=meli
-APP_PORT=50052
