--- a/purchases/Dockerfile
+++ b/purchases/Dockerfile
@@ -5,17 +5,17 @@ FROM golang:1.20.3-alpine3.17
 WORKDIR /app
 
 # copiar archivos necesarios
-COPY cmd ./cmd
-COPY internal ./internal
-COPY pkg ./pkg
-COPY docs ./docs
-COPY go.mod ./
-COPY go.sum ./
+COPY purchases/cmd ./cmd
+COPY purchases/internal ./internal
+COPY purchases/pkg ./pkg
+COPY purchases/docs ./docs
+COPY purchases/go.mod ./
+COPY purchases/go.sum ./
 
 RUN go mod download
 
 # copiar código fuente
-COPY cmd cmd/
+COPY purchases/cmd cmd/
 
 # compilar la aplicación
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o app ./cmd/
