--- a/purchases/.env.example
+++ b/purchases/.env.example
@@ -1,5 +1,3 @@
-MONGODB_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=admin
+PURCHASES_APP_PORT=50053
+MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=meli
-DB_PASSWORD=meli
-DB_DATABASE=meli
-APP_PORT=50053
