:sparkles: agrego borrado logico de vendedores y rollback ante fallo coreografia
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,5 @@ MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongo
 
 # GLOBAL ENVS FOR SERVICES
 DB_NAME=meli
+AMQP_URI=
+AMQP_QUEUE_NAME=
