--- a/users/.env.example
+++ b/users/.env.example
@@ -2,3 +2,6 @@ USERS_APP_PORT=50051
 MONGODB_CUSTOMERS_URI=mongodb+srv://<username>:<password>@cluster0.yimpnfi.mongodb.net/?retryWrites=true&w=majority
 MONGODB_SELLERS_URI=mongodb+srv://<username>:<password>@cluster0.wwtna6p.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=meli
+
+AMQP_URI=
+AMQP_QUEUE_NAME=
