:sparkles: borrado logico de compras y agrego rabbit al docker de testing
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/.env.test.example
+++ b/.env.test.example
@@ -19,3 +19,5 @@ MONGODB_PURCHASES_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=adm
 
 # GLOBAL ENVS FOR SERVICES
 DB_NAME=meli
+AMQP_URI=
+AMQP_QUEUE_NAME=
