--- a/purchases/.env.example
+++ b/purchases/.env.example
@@ -1,3 +1,6 @@
 PURCHASES_APP_PORT=50053
 MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=meli
+
+AMQP_URI=amqp://guest:guest@rabbitmq:5672
+AMQP_QUEUE_NAME=notifier
