--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -12,6 +12,8 @@ services:
       - users-service
       - products-service
       - purchases-service
+      - mongo
+      - rabbitmq
     links:
       - products-service
       - users-service
@@ -26,6 +28,7 @@ services:
       - mongo
     links:
       - mongo
+      - rabbitmq
     profiles: ["service"]
   products-service:
     build:
@@ -48,9 +51,19 @@ services:
       - mongo
     links:
       - mongo
+      - rabbitmq
     profiles: ["service"]
   #  TODO purchase-orchestator:
-  #  TODO notifier-service:
+  #  TODO notifier-service: podria no ponerse ya que encolamos los mensajes en un rabbit de dev
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"
+    profiles: ["service"]
   mongo:
     image: mongo
     ports:
