--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ go.work
 notifier/.idea
 notifier/src/main/config/__pycache__
 notifier/src/main/consumers/__pycache__
+
+# Purchase Orchestator
+make-purchase-orchestator/node_modules
+make-purchase-orchestator/.env
