:sparkles: integracion de coreografias: borrar un vendedor y borrar un producto
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
 # API GATEWAY
 API_GATEWAY_APP_PORT=9000
-USER_URL=http://users-service:50051/api/v1
-PRODUCT_URL=http://products-service:50052/api/v1/products
-PURCHASE_URL=http://purchases-service:50053/api/v1/purchases
 
 # USERS SERVICE
 USERS_APP_PORT=50051
@@ -18,6 +15,9 @@ PURCHASES_APP_PORT=50053
 MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongodb.net/?retryWrites=true&w=majority
 
 # GLOBAL ENVS FOR SERVICES
+USER_URL=http://users-service:50051/api/v1
+PRODUCT_URL=http://products-service:50052/api/v1
+PURCHASE_URL=http://purchases-service:50053/api/v1
 DB_NAME=meli
 AMQP_URI=
 AMQP_QUEUE_NAME=
