--- a/products/.env.example
+++ b/products/.env.example
@@ -1,3 +1,4 @@
 PRODUCTS_APP_PORT=50052
+PURCHASE_URL=http://localhost:50053/api/v1
 MONGODB_PRODUCTS_URI=mongodb+srv://<username>:<password>@cluster0.0abq03u.mongodb.net/?retryWrites=true&w=majority
 DB_NAME=meli
