--- a/notifier/Dockerfile
+++ b/notifier/Dockerfile
@@ -2,10 +2,10 @@ FROM python:3.9
 
 WORKDIR /app
 
-COPY . .
+COPY notifier/ ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENV PYTHONPATH /app
 
-CMD ["python3", "/app/src/main/main.py"]
+CMD ["python3", "./src/main/main.py"]
