--- a/.env.test.example
+++ b/.env.test.example
@@ -20,4 +20,5 @@ MONGODB_PURCHASES_URI=mongodb://meli:meli@db:27017/meli?ssl=false&authSource=adm
 # GLOBAL ENVS FOR SERVICES
 DB_NAME=meli
 AMQP_URI=
-AMQP_QUEUE_NAME=
+AMQP_QUEUE_NAME=pruebaprueba
+ENVIRONMENT=test
