--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ MONGODB_PRODUCTS_URI=mongodb+srv://<username>:<password>@cluster0.0abq03u.mongod
 PURCHASES_APP_PORT=50053
 MONGODB_PURCHASES_URI=mongodb+srv://<username>:<password>@cluster0.iimovnl.mongodb.net/?retryWrites=true&w=majority
 
+# PURCHASE ORCHESTRATOR
+PURCHASES_ORCHESTRATOR_URL=http://purchases-orchestrator-service:50054/api/v1
+ORCHESTATOR_PORT=50054
+
 # GLOBAL ENVS FOR SERVICES
 USER_URL=http://users-service:50051/api/v1
 PRODUCT_URL=http://products-service:50052/api/v1
