:white_check_mark: :memo: tests de integracion de realizar compra y mejora en la doc para correr tests
Signed-off-by: Fede Sandoval <federico.sandoval@alu.unq.edu.ar>

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -50,8 +50,20 @@ services:
     links:
       - mongo
     profiles: ["service"]
-  #  TODO purchase-orchestator:
-  #  TODO notifier-service: podria no ponerse ya que encolamos los mensajes en un rabbit de dev
+  purchases-orchestrator-service:
+    build:
+      context: .
+      dockerfile: make-purchase-orchestator/Dockerfile
+    container_name: meli_purchase_orchestrator_service
+    depends_on:
+      - users-service
+      - products-service
+      - purchases-service
+    links:
+      - products-service
+      - users-service
+      - purchases-service
+    profiles: ["service"]
   mongo:
     image: mongo
     ports:
